--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Document</title>
+    <title>SD✨Servicios</title>
 </head>
 <body class="contenedor">
     <header class="header">
