--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>
             Stefania Denisse 
         </h1>
-        <img class= "imglogo" src="../img/sd.jpg" alt="logo">
+        <img class= "imglogo" src="./img/sd.jpg" alt="logo">
         <nav class="nav">
             <ul>
                 <li>
@@ -60,7 +60,7 @@
     </main>
     <aside class="aside">
         <div class = "fondo"> 
-            <img src="../img/tip1.jpeg" alt="fondo">
+            <img src="./img/esc3.jpeg" alt="fondo">
         </div>
 
         
