--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descripcion" content="SD community manager brinda asesoría para redes sociales, adecuada a la necesidad de cada cliente">
+    <meta name="keywords" content="CM, COMMUNITY, MANAGER, REDES, ASESORÍA, SERVICIOS,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@300&display=swap" rel="stylesheet">
@@ -62,8 +64,6 @@
         <div class = "fondo"> 
             <img src="./img/esc3.jpeg" alt="fondo">
         </div>
-
-        
     </aside>
     <footer class="footer">
         <h2>Telefono</h2>
