--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descripcion" content="SD community manager piensa en cada cliente para ofrecerle un servicio a medida.">
+    <meta name="keywords" content="CM, COMMUNITY, MANAGER, REDES, ASESORÍA, SERVICIOS,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@300&display=swap" rel="stylesheet">
@@ -44,7 +46,7 @@
         </nav>
     </header>
     <main class="main">
-        <h1>Nuestros trabajos</h1>
+        <h2>Nuestros trabajos</h2>
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
