--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
             </p>
         </div>
         <div class = "fondo2"> 
-            <img src="../img/tip6.jpeg" alt="fondo2">
-            </div>
-
+            <img src="../img/tip6.jpeg" alt="Contenidos de ejemplo">
+        </div>
     </main>
     <aside class="aside">
         <div class = "fondo"> 
-            <img src="./img/esc3.jpeg" alt="fondo">
+            <img src="./img/esc3.jpeg" alt="Monitorizamos y cuidamos la interacción con tu comunidad">
         </div>
     </aside>
     <footer class="footer">
