--- a/pages/contactame.html
+++ b/pages/contactame.html
@@ -80,10 +80,10 @@
     </main>
     <aside class="aside">
         <div class = "fondo"> 
-            <img src="../img/esc3.jpeg" alt="fondo">
+            <img src="../img/esc3.jpeg" alt="Deja tus datos">
         </div>
     </aside>
-    <footer class="footer">
+    <footer class="footer"> 
         <h2>Telefono</h2>
         <h2>Email</h2>
     </footer>
