--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -49,19 +49,19 @@
         <section class= "misservicios">
             <h2>MIS SERVICIOS</h2>
             <div class="servicios">
-            <h2>
-            Análisis actual- Análisis FODA - definir estrategias de contenido.
-            <h2>
+                <h2>
+                    Análisis actual- Análisis FODA - definir estrategias de contenido.
+                <h2>
             </div>
             <div class="servicios1">
-            <h2>
-            Diseño del feed- Optimización de la biografía.
-            <h2>
+                <h2>
+                    Diseño del feed- Optimización de la biografía.
+                <h2>
             </div>
             <div class="servicios2">
-            <h2>
-            Gestión de las redes.
-            <h2>
+                <h2>
+                    Gestión de las redes.
+                <h2>
             </div>
             <div class="servicios3">
                 <h2>
@@ -91,9 +91,9 @@
         </section>
     </main>
     <aside class="aside">
-        <section class="asideservicios">
-            <img src="../img/planta.jpeg" alt="planta">
-        </section>
+        <div class="asideservicios">
+            <img src="../img/planta.jpeg" alt="Gestión de redes">
+        </div>
     </aside>
     <footer class="footer">
         <h2>Telefono</h2>
