--- a/pages/tipsutiles.html
+++ b/pages/tipsutiles.html
@@ -47,34 +47,36 @@
     </header>
     <main class="main">
         <section class = "tips">
-            <ul> TIPS ÚTILES
-                <li> 
-                  Foto de Perfil: Elegir una foto del logo de tu marca/servicio o una foto tuya de alta calidad.
-                </li>
-                <li>
-                  Cabecera: Utilizar palabras CLAVE que definan tu marca/rubro/servicio. Así pueden encontrarte en los motores de búsqueda.
-                </li>
-                <li>
-                  Cuerpo: ¿Qué ofreces y qué resultados pueden conseguir los usuarios con tu producto/servicio? Ser específicos, creativos, usar emojis para darle dinamismo.
-                </li>
-                <li>
-                  Llamado a la acción (CTA): Invitar al usuarios a que realice alguna acción dentro de tu perfil. 
-                </li>
-                <li>
-                  Link: Adjuntar el link con la página web de tu producto/servicio o un link de contacto, por ejemplo, el link de Whatsapp Bussiness de tu empresa.
-                </li>
-                <li>
-                  Ubicación: Muy importante para que los usuarios conozcan de donde sos.
-                  
-                </li>
-            </ul>
+          <h2>
+            TIPS ÚTILES
+          </h2>
+          <ul> 
+              <li> 
+                Foto de Perfil: Elegir una foto del logo de tu marca/servicio o una foto tuya de alta calidad.
+              </li>
+              <li>
+                Cabecera: Utilizar palabras CLAVE que definan tu marca/rubro/servicio. Así pueden encontrarte en los motores de búsqueda.
+              </li>
+              <li>
+                Cuerpo: ¿Qué ofreces y qué resultados pueden conseguir los usuarios con tu producto/servicio? Ser específicos, creativos, usar emojis para darle dinamismo.
+              </li>
+              <li>
+                Llamado a la acción (CTA): Invitar al usuarios a que realice alguna acción dentro de tu perfil. 
+              </li>
+              <li>
+                Link: Adjuntar el link con la página web de tu producto/servicio o un link de contacto, por ejemplo, el link de Whatsapp Bussiness de tu empresa.
+              </li>
+              <li>
+                Ubicación: Muy importante para que los usuarios conozcan de donde sos.  
+              </li>
+          </ul>
         </section>
 
     </main>
     <aside class="aside">
-        <section class="asidetips">
-            <img src="../img/tip2.jpeg" alt="tip2">
-        </section>
+        <div class="asidetips">
+            <img src="../img/tip2.jpeg" alt="Ejemplos de trabajos realizados">
+        </div>
     </aside>
     <footer class="footer">
         <h2>Telefono</h2>
