--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -50,13 +50,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/tip3.jpeg" class="d-block w-100" alt="nosotros1">
+                <img src="../img/tip3.jpeg" class="d-block w-100" alt="Feed en tonos blancos">
               </div>
               <div class="carousel-item">
-                <img src="../img/tip4.jpeg" class="d-block w-100" alt="nosotros2">
+                <img src="../img/tip4.jpeg" class="d-block w-100" alt="Feed en tonos beige">
               </div>
               <div class="carousel-item">
-                <img src="../img/tip6.jpeg" class="d-block w-100" alt="nosotros3">
+                <img src="../img/tip6.jpeg" class="d-block w-100" alt="Feed en tonos negros">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -70,9 +70,9 @@
           </div>
     </main>
     <aside class="aside">
-        <section class="asidenosotros">
-            <img src="../img/creatividad.jfif" alt="redes">
-        </section>
+        <div class="asidenosotros">
+            <img src="../img/creatividad.jfif" alt="Creatividad">
+        </div>
     </aside>
     <footer class="footer">
         <h2>Telefono</h2>
